Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109025

High DPI scaling breaks Mouse/Stylus on Android

    XMLWordPrintable

Details

    • Android
    • 05de22e5f (dev), 3369a7ab5 (6.6), 819e52db0 (6.5), 14e7f0c47 (tqtc/lts-6.2)

    Description

      On Android, if High DPI scaling is enabled, it appears that sometimes a mouse or stylus cannot be used to select items in QComboBoxes, QMenus or sometimes QPushButtons . It's not always broken, but seems to depend upon other widgets used.

      I've attached a small reproducible example, where the QComboBox is inside a QDockWidget. The problem here only appears to be when docked on the right, not the left. However, in more complicated examples (i.e. a full application) the ComboBoxes don't seem to work at all.

      In the example, the problem goes away if High DPI Scaling is disabled, but this can only be done on Qt 5.15.2, not 6.4.0.

       

      Attachments

        1. main.cpp
          0.2 kB
          Jon Beniston
        2. mainwindow.cpp
          0.7 kB
          Jon Beniston
        3. mainwindow.h
          0.2 kB
          Jon Beniston
        4. patch.txt
          6 kB
          Jon Beniston

        Issue Links

          For Gerrit Dashboard: QTBUG-109025
          # Subject Branch Project Status CR V

          Activity

            People

              srutledg Shawn Rutledge
              srcejon Jon Beniston
              Votes:
              2 Vote for this issue
              Watchers:
              13 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes