Fix hi-dpi mouse and tablet events on Android

Windows are not always fullscreen: e.g. the widget gallery example main
window isn't maximized, and a popup window may open anywhere on the
screen. So we always needed to offset by the window position. But it's
better to use QPlatformWindow::mapFromGlobal() since we are working with
native coordinates here.

Fixes: QTBUG-109025
Change-Id: Id3d139fad610bbbc67a394599570a309196ae64c
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 05de22e5f9edb107115029a126170034a78a5096)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 3369a7ab5fcae122ddc5db8e74e09631d2c5016d)
(cherry picked from commit 819e52db0d9469737d9932fda8672eb9217996e1)